log.js  func call with dynamic name

--- a/day2/task/index.html
+++ b/day2/task/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<meta charet="utf-8">
+	<meta charset="utf-8">
 	<script type="text/javascript" src="scripts/common.js"></script>
 	<script type="text/javascript" src="scripts/init.js"></script>
 	<script type="text/javascript" src="scripts/log.js"></script>
