--- a/day3/task/index.html
+++ b/day3/task/index.html
@@ -3,31 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
-		<script type="text/javascript" src="js/angular.min.js"></script>
+		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 	<body>
 		<div class="main">
-			<div class="fields-container">
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-				<div class="field">33</div>
-			</div>
+			<div class="field-container"></div>
 			<div class="buttons">
-				<div class="but" onclick="">Generate</div>
-				<div class="but">Set Color</div>
-				<div class="but">Reset</div>
+				<div id="generate" class="but">Generate</div>
+				<div id="color" class="but">Set Color</div>
+				<div id="reset" class="but">Reset</div>
 			</div>
 		</div>
 	</body>
