--- a/day4/task/index.html
+++ b/day4/task/index.html
@@ -10,10 +10,10 @@
 <body>
 	<div class="content">
 		<div id="field">
-			<div id="road1" class="field-line"></div>
-			<div id="road2" class="field-line"></div>
-			<div id="road3" class="field-line"></div>
-			<div id="road4" class="field-line"></div>
+			<div class="field-line"></div>
+			<div class="field-line"></div>
+			<div class="field-line"></div>
+			<div class="field-line"></div>
 		</div>
 		<div class="buttons">
 			<div id="generate" class="button">Generate</div>
