--- a/day4/task/index.html
+++ b/day4/task/index.html
@@ -10,12 +10,7 @@
 <body>
 	<div class="content">
 		<div id="field">
-			<div class="field-line">
-				<div class="zombie-field">
-					<div class="health">65</div>
-					<div class="zombie michael"></div>
-				</div>
-			</div>
+			<div class="field-line"></div>
 			<div class="field-line"></div>
 			<div class="field-line"></div>
 			<div class="field-line"></div>
