--- a/day4/task/index.html
+++ b/day4/task/index.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/mediator.js"></script>
-	<script type="text/javascript" src="js/zombies.js"></script>
+	<script type="text/javascript" src="js/entity/zombies.js"></script>
 </head>
 <body>
 	<div class="content">
@@ -17,6 +17,9 @@
 		</div>
 		<div class="buttons">
 			<div id="generate" class="button">Generate</div>
+			<div id="explode" class="button">Explode</div>
+			<div id="growOld" class="button">Grow Old</div>
+			<div id="slowUp" class="button">Slow up</div>
 		</div>
 		<div class="game-over">Game Over</div>
 	</div>
