added two types of plants, two types of bullets.

--- a/day4/task/index.html
+++ b/day4/task/index.html
@@ -5,7 +5,15 @@
 	<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/mediator.js"></script>
-	<script type="text/javascript" src="js/entity/zombies.js"></script>
+	<script type="text/javascript" src="js/entity/zombies/zombie.js"></script>
+	<script type="text/javascript" src="js/entity/zombies/zombieMichael.js"></script>
+	<script type="text/javascript" src="js/entity/zombies/zombieStrong.js"></script>
+	<script type="text/javascript" src="js/entity/plants/weapon.js"></script>
+	<script type="text/javascript" src="js/entity/plants/plantStrong.js"></script>
+	<script type="text/javascript" src="js/entity/plants/plantSimple.js"></script>
+	<script type="text/javascript" src="js/entity/bullets/bullet.js"></script>
+	<script type="text/javascript" src="js/entity/bullets/bulletSimple.js"></script>
+	<script type="text/javascript" src="js/entity/bullets/bulletStrong.js"></script>
 </head>
 <body>
 	<div class="content">
@@ -20,6 +28,8 @@
 			<div id="explode" class="button">Explode</div>
 			<div id="growOld" class="button">Grow Old</div>
 			<div id="slowUp" class="button">Slow up</div>
+			<div id="plantSimple" class="button">Plant Simple</div>
+			<div id="plantStrong" class="button">Plant Strong</div>
 		</div>
 		<div class="game-over">Game Over</div>
 	</div>
